Optimist is unmaintained, move to yargs

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "http-proxy": "1.14.0",
     "localenv": "0.2.2",
     "on-finished": "2.3.0",
-    "optimist": "0.6.1",
-    "tldjs": "1.6.2"
+    "tldjs": "1.6.2",
+    "yargs": "^8.0.2"
   },
   "devDependencies": {
     "mocha": "2.5.3",
